--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
   <meta name="google-site-verification" content="8zqeFQNuNAWS7ye6oN69hdEeYC_RsDyAlhht79xtAQo" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:image" content="{{site.baseurl}}/assets/res/banner.png" />
+  <meta name="robots" content="noindex">
   <title>
     {% if page.title %}
       {{ page.title | escape }} | Notes of Thi
