--- a/_includes/header-wTOC.html
+++ b/_includes/header-wTOC.html
@@ -1,10 +1,4 @@
-<nav class="top-nav teal">
-  <div class="nav-wrapper">
-    <div class="container">
-      <a class="page-title font-title" href="{{site.baseurl}}/">Notes of Thi</a>
-    </div>
-  </div>
-</nav>
+{% include header-nav.html %}
 <div class="container">
   <a href="#" data-activates="slide-out" class="button-collapse top-nav full hide-on-large-only">
     <i class="material-icons">menu</i>
