--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,5 +49,6 @@ js: ["post.js"]
     </span>
     </div>
     {% include search_form.html %}
+    {% include related-posts.html %}
   </div>
 </main>
