--- a/assets/css/thi.css
+++ b/assets/css/thi.css
@@ -392,7 +392,7 @@ li>img{
 	display: block;
 	text-align: center;
 	box-shadow: 0px 0 5px 0;
-	margin: auto;
+	margin: 10px auto;
 }
 
 .container p>img{
