--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,6 +29,7 @@
   <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
 
   <link rel="stylesheet" href="{{site.baseurl}}/assets/css/thi.css">
+  <link rel="stylesheet" href="{{site.baseurl}}/assets/css/thi_scss.css">
   {% for css in layout.css %}
   {% if css contains "//" %}
   <link rel="stylesheet" href="{{css}}">
