--- a/assets/css/post.sass
+++ b/assets/css/post.sass
@@ -31,7 +31,7 @@ main
 #post-info
   h3
     font-weight: bold
-    margin-bottom: 15px
+    margin: 1.5rem 0 0.2rem 0
 
   ul
     &:not(.browser-default)
