--- a/assets/css/thi_scss.scss
+++ b/assets/css/thi_scss.scss
@@ -59,3 +59,15 @@ hr{
   margin: 2rem auto;
   width: 40%;
 }
+
+.tag-sec{
+  display: none;
+}
+:target{
+  display: block;
+}
+
+.chip{
+  margin-bottom: 10px;
+  background-color: #eee;
+}
