--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="page-footer teal">
   <div class="footer-copyright">
     <div class="container text-white">
-     <a href="https://dinhanhthi.com">Thi's site</a> &#xA9; {{"now" | date: "%Y"}} <b>{{site.title}}</b>. Giao diện chỉnh sửa từ <a href="https://shawnteoh.github.io/matjek/">MatJeck</a>.
+     <a href="https://dinhanhthi.com">Note of Thi</a> &#xA9; {{"now" | date: "%Y"}} Giao diện chỉnh sửa từ <a href="https://shawnteoh.github.io/matjek/">MatJeck</a>.
     </div>
   </div>
 </footer>
