from local linux

--- a/assets/css/thi_scss.scss
+++ b/assets/css/thi_scss.scss
@@ -65,9 +65,12 @@ li ul:not(.browser-default){
 }
 
 .collapsible-body{
-  & > ul{
-    margin-top: 1rem;
-  }
+  padding: 1rem!important;
+}
+
+li > .collapsible{
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 hr{
