ud machine learning coursera

--- a/_sass/_box.scss
+++ b/_sass/_box.scss
@@ -106,3 +106,11 @@
 .collapsible-body{
 	padding: 0 2rem!important;
 }
+
+// p mark
+.p-mark{
+  border: 2px dashed #298cd0;
+  padding: 0.5rem 1rem;
+  margin: 1rem 0;
+  background: #e0ffff7a;
+}
