css headings and box

--- a/_sass/_box.scss
+++ b/_sass/_box.scss
@@ -111,6 +111,7 @@
 .p-mark{
   border: 2px dashed #298cd0;
   padding: 0.5rem 1rem;
-  margin: 1rem 0;
+  margin: 1.5rem auto;
   background: #e0ffff7a;
+  width: fit-content;
 }
