--- a/_sass/_list.sass
+++ b/_sass/_list.sass
@@ -45,5 +45,6 @@ ul
         &:hover
           list-style-type: circle
           padding-left: 20px
+          color: #ed143d
 
         @include transition(all .2s ease-in-out)
