--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,7 +16,10 @@ css: ["page.css"]
 		  <h2>{{page.title}}</h2>
 		</div>
 		<div class="row">
-		  {{ content }}
+			{{ content }}
+			{% if site.disqus_shortname and (page.comment or page.comments) %}
+			  {% include disqus.html %}
+			{% endif %}
 		</div>
 	</div>
 </main>
