--- a/assets/css/thi_scss.scss
+++ b/assets/css/thi_scss.scss
@@ -211,6 +211,7 @@ table, th, td{
 }
 .see-again{
   color: #5b119f;
+  margin: 1rem 0;
   a{
     color: #925fc2;
     border-bottom: 1px solid #925fc2;
