--- a/_sass/_image.scss
+++ b/_sass/_image.scss
@@ -2,7 +2,7 @@ li>img{
 	max-width: 100%;
 	display: block;
 	text-align: center;
-	box-shadow: 0px 0 5px 0;
+	// box-shadow: 0px 0 5px 0;
 	margin: 10px auto;
 }
 .container p>img{
