--- a/_sass/_image.scss
+++ b/_sass/_image.scss
@@ -61,3 +61,12 @@ li>img{
         display: block;
     }
 }
+
+.columns-2{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  @media (max-width: 767px){
+    grid-template-columns: 1fr;
+  }
+}
