hide toc on large view

--- a/_sass/_heading.scss
+++ b/_sass/_heading.scss
@@ -46,7 +46,7 @@ h4{
     h3{
         counter-reset: h4counter;
         font-size: 1.3rem;
-        color: #333;
+        color: #a25c5c;
         margin-top: 2.2rem;
     }
     h2 + .thi-more + h3{
