--- a/_sass/_toc.scss
+++ b/_sass/_toc.scss
@@ -1,13 +1,16 @@
 #toc {
-    margin: 20px 0 20px 10px;
-    background-color:#eee;
-    box-sizing: border-box;
-    border: 0px solid;
-    border-radius: 5px;
-    font-size: 0.9rem;
-    float: right;
-    max-width: 40%;
-    margin-top: 1.5rem;
+  margin: 20px 0 20px 10px;
+  background-color:#eee;
+  box-sizing: border-box;
+  border: 0px solid;
+  border-radius: 5px;
+  font-size: 0.9rem;
+  float: right;
+  max-width: 40%;
+  margin-top: 1.5rem;
+  @media (min-width: 770px){
+    display: none;
+  }
 }
 
 #full{
@@ -17,25 +20,25 @@
 }
 
 .toc-title{
-    background-color: #ddd;
-    padding: 5px;
-    border-radius: 5px 5px 0 0;
+  background-color: #ddd;
+  padding: 5px;
+  border-radius: 5px 5px 0 0;
 }
 
 .mat-icon{
-    line-height: initial;
+  line-height: initial;
 }
 
 #toc span{
-    font-weight: 500;
+  font-weight: 500;
 }
 
 @media only screen and (max-width: 769px){
-    #toc{
-        float: none;
-        margin-left: 0;
-        max-width: 100%;
-    }
+  #toc{
+    float: none;
+    margin-left: 0;
+    max-width: 100%;
+  }
 }
 
 
@@ -89,7 +92,7 @@
         counter-reset: item;
         list-style-type: none;
     }
-    li{ 
+    li{
         &::before{
             content: counters(item, ".") ". ";
             counter-increment: item;
