add colors for texts

--- a/_sass/_font.scss
+++ b/_sass/_font.scss
@@ -35,6 +35,22 @@ a {
   }
 }
 
+.tgreen{
+  color: #008000!important;
+}
+.tblue{
+  color: #2b7cc1!important;
+}
+.tpink{
+  color: #c12ba1!important;
+}
+.tred{
+  color: #d41e1e!important;
+}
+.torange{
+  color: #d46a1e!important;
+}
+
 .text-white{
   color: white;
   a{
