add more image size w-

--- a/_sass/_image.scss
+++ b/_sass/_image.scss
@@ -30,7 +30,9 @@ li>img{
 	.w-400{max-width: 400px!important;}
 	.w-500{max-width: 500px!important;}
 	.w-600{max-width: 600px!important;}
+  .w-650{max-width: 650px!important;}
 	.w-700{max-width: 700px!important;}
+  .w-750{max-width: 750px!important;}
 	.w-800{max-width: 800px!important;}
 	.w-900{max-width: 900px!important;}
 	.w-1000{max-width: 1000px!important;}
