--- a/_sass/_toc.scss
+++ b/_sass/_toc.scss
@@ -56,7 +56,7 @@
         margin-top: 0;
         li{
             margin: 5px 0;
-            line-height: inherit;
+            line-height: 1.2;
             &>a{
                 padding: 0!important;
                 height: inherit;
